# glacier-settings

./: .gitignore  CMakeLists.txt  es.conf  glacier-settings.desktop  glacier-settings.privileges  glacier-settings.pro  privileges  transifex.yml
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  glaciersettings_global.h  glaciersettingsplugin.h  imagesmodel.cpp  imagesmodel.h  logging.cpp  logging.h  satellitemodel.cpp  satellitemodel.h  settingsmodel.cpp  settingsmodel.h  settingspluginhost.cpp  settingspluginhost.h  settingspluginmanager.cpp  settingspluginmanager.h  themesmodel.cpp  themesmodel.h  timezonesmodel.cpp  timezonesmodel.h
src/models/: imagesmodel.cpp  imagesmodel.h  satellitemodel.cpp  satellitemodel.h  settingsmodel.cpp  settingsmodel.h  settingsproxymodel.cpp  settingsproxymodel.h  themesmodel.cpp  themesmodel.h  timezonesmodel.cpp  timezonesmodel.h
src/plugins/: CMakeLists.txt  glaciersettingsplugin.h  settingspluginmanager.cpp  settingspluginmanager.h
src/plugins/about/: CMakeLists.txt  about.qml  aboutsettingsplugin.cpp  aboutsettingsplugin.h  magic.qml
src/plugins/about/translations/: about.ts  about_cs.ts  about_de.ts  about_en_US.ts  about_es.ts  about_fi.ts  about_nl.ts  about_pl.ts  about_ru.ts  about_sk_SK.ts  about_uk.ts
src/plugins/bluez/: BtDevisesList.qml  CMakeLists.txt  bluez.qml  bluezsettingsplugin.cpp  bluezsettingsplugin.h
src/plugins/bluez/translations/: bluez.ts  bluez_cs.ts  bluez_de.ts  bluez_es.ts  bluez_fi.ts  bluez_nl.ts  bluez_pl.ts  bluez_ru.ts  bluez_sk_SK.ts  bluez_uk.ts
src/plugins/datetime/: CMakeLists.txt  SetupDate.qml  SetupTime.qml  SetupTimezone.qml  datetime.qml  datetimesettingsplugin.cpp  datetimesettingsplugin.h
src/plugins/datetime/translations/: datetime.ts  datetime_cs.ts  datetime_de.ts  datetime_en_US.ts  datetime_es.ts  datetime_fi.ts  datetime_nl.ts  datetime_pl.ts  datetime_ru.ts  datetime_sk_SK.ts  datetime_uk.ts
src/plugins/developermode/: CMakeLists.txt  developermodesettingsplugin.cpp  developermodesettingsplugin.h
src/plugins/developermode/translations/: developermode_cs.ts  developermode_de.ts  developermode_en_US.ts  developermode_es.ts  developermode_fi.ts  developermode_nl.ts  developermode_pl.ts  developermode_ru.ts  developermode_sk_SK.ts  developermode_uk.ts
src/plugins/devicelock/: CMakeLists.txt  DeviceLockPad.qml  devicelock.qml  devicelocksettingsplugin.cpp  devicelocksettingsplugin.h
src/plugins/devicelock/translations/: devicelock.ts  devicelock_cs.ts  devicelock_de.ts  devicelock_en_US.ts  devicelock_es.ts  devicelock_fi.ts  devicelock_nl.ts  devicelock_pl.ts  devicelock_ru.ts  devicelock_sk_SK.ts  devicelock_uk.ts
src/plugins/display/: CMakeLists.txt  display.qml  displaysettingsplugin.cpp  displaysettingsplugin.h
src/plugins/display/translations/: display_cs.ts  display_de.ts  display_en_US.ts  display_es.ts  display_fi.ts  display_nl.ts  display_pl.ts  display_ru.ts  display_sk_SK.ts  display_uk.ts
src/plugins/example/: CMakeLists.txt  example.qml  examplesettingsplugin.cpp  examplesettingsplugin.h  exaplesettingsplugin.cpp  exaplesettingsplugin.h
src/plugins/example/translations/: example_cs.ts  example_de.ts  example_en_US.ts  example_es.ts  example_fi.ts  example_nl.ts  example_pl.ts  example_ru.ts  example_sk_SK.ts  example_uk.ts
src/plugins/keyboard/: CMakeLists.txt  keyboard.qml  keyboardsettingsplugin.cpp  keyboardsettingsplugin.h
src/plugins/language/: CMakeLists.txt  language.qml  languagesettingsplugin.cpp  languagesettingsplugin.h
src/plugins/language/supported-languages/: cs.conf  en_gb.conf  fi.conf  pl.conf
src/plugins/language/translations/: language.ts  language_cs.ts  language_de.ts  language_en_US.ts  language_es.ts  language_fi.ts  language_nl.ts  language_pl.ts  language_ru.ts  language_sk_SK.ts  language_uk.ts
src/plugins/location/: CMakeLists.txt  location.qml  locationsettingsplugin.cpp  locationsettingsplugin.h
src/plugins/location/translations/: location.ts  location_cs.ts  location_de.ts  location_en_US.ts  location_es.ts  location_fi.ts  location_nl.ts  location_pl.ts  location_ru.ts  location_sk_SK.ts  location_uk.ts
src/plugins/mobile/: CMakeLists.txt  mobile.qml  mobilesettingsplugin.cpp  mobilesettingsplugin.h
src/plugins/mobile/translations/: mobile.ts  mobile_cs.ts  mobile_de.ts  mobile_en_US.ts  mobile_es.ts  mobile_fi.ts  mobile_nl.ts  mobile_pl.ts  mobile_ru.ts  mobile_sk_SK.ts  mobile_uk.ts
src/plugins/nfc/: CMakeLists.txt  nfc.qml  nfcsettingsplugin.cpp  nfcsettingsplugin.h
src/plugins/nfc/translations/: nfc.ts  nfc_cs.ts  nfc_de.ts  nfc_es.ts  nfc_fi.ts  nfc_nl.ts  nfc_pl.ts  nfc_ru.ts  nfc_sk_SK.ts  nfc_uk.ts
src/plugins/powersave/: BatteryHealth.qml  CMakeLists.txt  powersave.qml  powersavesettingsplugin.cpp  powersavesettingsplugin.h
src/plugins/powersave/translations/: powersave.ts  powersave_cs.ts  powersave_de.ts  powersave_en_US.ts  powersave_es.ts  powersave_fi.ts  powersave_nl.ts  powersave_pl.ts  powersave_ru.ts  powersave_sk_SK.ts  powersave_uk.ts
src/plugins/sounds/: CMakeLists.txt  SelectRingTonePage.qml  SoundLabel.qml  sounds.qml  soundssettingsplugin.cpp  soundssettingsplugin.h
src/plugins/sounds/translations/: sounds_cs.ts  sounds_de.ts  sounds_en_US.ts  sounds_es.ts  (+6 more)
src/plugins/storage/: CMakeLists.txt  storage.qml  storagesettingsplugin.cpp  storagesettingsplugin.h
src/plugins/usb/: CMakeLists.txt  usb.qml  usbsettingsplugin.cpp  usbsettingsplugin.h
src/plugins/vpn/: AddVpnPage.qml  CMakeLists.txt  VpnEditPage.qml  vpn.qml  vpnsettingsplugin.cpp  vpnsettingsplugin.h
src/plugins/wifi/: CMakeLists.txt  NetworkDelegate.qml  SavedServices.qml  SavedStatus.qml  WifiSettings.qml  WifiStatus.qml  wifi.qml  wifisettingsplugin.cpp  wifisettingsplugin.h
src/qml/: glacier-settings.qml  glacier-settings.qrc
src/qml/components/: AiroplaneButton.qml  QuickButton.qml  QuickSettings.qml  RightCheckBox.qml  SettingsClickedItem.qml  SettingsColumn.qml  SettingsService.qml  VolumeButton.qml  WifiButton.qml  qmldir
src/settingsmodel/: settingsmodel.cpp  settingsmodel.h
(+154 files in other folders)
