add_subdirectory(about)
add_subdirectory(bluez)
add_subdirectory(datetime)
if(MER_DEVMODE)
    add_subdirectory(developermode)
endif()
add_subdirectory(devicelock)
add_subdirectory(display)
if(BUILD_EXAMPLES)
    add_subdirectory(example)
endif()
add_subdirectory(keyboard)
add_subdirectory(language)
add_subdirectory(location)
add_subdirectory(mobile)
add_subdirectory(nfc)
add_subdirectory(powersave)
add_subdirectory(sounds)
add_subdirectory(storage)
add_subdirectory(usb)
add_subdirectory(wifi)
